--- a/api/crds/v1alpha2/backupconfiguration.yaml
+++ b/api/crds/v1alpha2/backupconfiguration.yaml
@@ -8,8 +8,8 @@ metadata:
   name: backupconfigurations.stash.appscode.com
 spec:
   additionalPrinterColumns:
-  - JSONPath: .spec.stashTemplate
-    name: Template
+  - JSONPath: .spec.backupProcedure
+    name: Procedure
     type: string
   - JSONPath: .spec.schedule
     name: Schedule
@@ -32,8 +32,6 @@ spec:
     - bc
     singular: backupconfiguration
   scope: Namespaced
-  subresources:
-    status: {}
   validation:
     openAPIV3Schema:
       properties:
@@ -327,6 +325,10 @@ spec:
               type: string
         spec:
           properties:
+            backupProcedure:
+              description: BackupProcedure specify the Procedure crd that specifies
+                the steps to take backup
+              type: string
             containerAttributes:
               properties:
                 args:
@@ -1582,10 +1584,6 @@ spec:
                 prune:
                   type: boolean
             schedule:
-              type: string
-            stashTemplate:
-              description: StashTemplate specify the StashTemplate crd that will be
-                used for creating backup job
               type: string
             target:
               properties:
