--- a/api/crds/v1alpha2/defaultbackupconfiguration.yaml
+++ b/api/crds/v1alpha2/defaultbackupconfiguration.yaml
@@ -8,8 +8,8 @@ metadata:
   name: defaultbackupconfigurations.stash.appscode.com
 spec:
   additionalPrinterColumns:
-  - JSONPath: .spec.stashTemplate
-    name: Template
+  - JSONPath: .spec.backupProcedure
+    name: Backup-Procedure
     type: string
   - JSONPath: .spec.schedule
     name: Schedule
@@ -29,8 +29,6 @@ spec:
     - dbc
     singular: defaultbackupconfiguration
   scope: Cluster
-  subresources:
-    status: {}
   validation:
     openAPIV3Schema:
       properties:
@@ -1526,6 +1524,10 @@ spec:
                       type: string
                     prefix:
                       type: string
+            backupProcedure:
+              description: BackupProcedure specify the BackupProcedure crd that specifies
+                steps for backup process
+              type: string
             containerAttributes:
               properties:
                 args:
@@ -2770,10 +2772,6 @@ spec:
                 prune:
                   type: boolean
             schedule:
-              type: string
-            stashTemplate:
-              description: StashTemplate specify the StashTemplate crd that will be
-                used for creating backup job
               type: string
             wipeOut:
               description: If true, delete respective restic repository
