--- a/docs/examples/design/backup/backup_database.yaml
+++ b/docs/examples/design/backup/backup_database.yaml
@@ -1,12 +1,12 @@
 apiVersion: stash.appscode.com/v1alpha2
 kind: BackupConfiguration
 metadata:
-  name: backup-database-demo
+  name: database-backup-demo
   namespace: demo
 spec:
   schedule: '@every 1h'
-  # stashTemplate indicates StashTemplate crd to use for backup the target database.
-  stashTemplate: pgBackup
+  # backupProcedure indicates Procedure crd that specifies the steps to backup postgres database
+  backupProcedure: pgBackup
   # repository refers to the Repository crd that hold backend information
   repository:
     name: stash-backup-repo
@@ -20,22 +20,3 @@ spec:
   retentionPolicy:
     keepLast: 5
     prune: true
-  # containerAttributes is an optional field that can be use to set some attributes
-  # such as resources, securityContext etc. to backup sidecar container
-  containerAttributes:
-    # these arguments will be passed to the backup command.
-    # you can use it to backup specific database. by default stash will backup all databases
-    args:
-    - mydb
-    - anotherdb
-    resources:
-      requests:
-        memory: "64Mi"
-        cpu: "250m"
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
-  # podAttributes is an optional field that can be used to set some attributes such as nodeSelector, affinity, toleration etc. for the backup job
-  podAttributes:
-    nodeSelector:
-      cloud.google.com/gke-nodepool: pool-highcpu32
