--- a/docs/examples/design/action/cluster_backup.yaml
+++ b/docs/examples/design/action/cluster_backup.yaml
@@ -5,14 +5,22 @@ metadata:
   name: clusterBackup
 spec:
   container:
-    image: appscode/cluster-backup:0.1.0
-    name:  cluster-backup
-    command: ["backup"]
+    image:  appscodeci/cluster-tool:v1
+    name:  cluster-tool
     args:
-    - sanitize=$(sanitize)
-    env:
-    - name: RESTIC_REPOSITORY
-      value: $(repository)
-    envFrom:
-    - secretRef:
-        name: $(storageSecret)
+    - backup
+    - --sanitize=${sanitize}
+    - --provider=${provider}
+    - --hostname=${hostname}
+    - --path=${repoDir}
+    - --output-dir=${outputDir}
+    - --retention-policy.policy=${policy}
+    - --retention-policy.value=${retentionValue}
+    - --metrics.enabled=${enableMetric}
+    - --metrics.pushgateway-url=${pushgatewayURL}
+    - --metrics.labels="workload-kind=${workloadKind},workload-name=${workloadName}"
+    volumeMounts:
+    - name: ${tempVolumeName}
+      mountPath: /tmp/restic
+    - name: ${storageSecretName}
+      mountPath: /etc/secrets/storage-secret
