--- a/docs/examples/design/backup/backup_volume.yaml
+++ b/docs/examples/design/backup/backup_volume.yaml
@@ -1,14 +1,14 @@
 apiVersion: stash.appscode.com/v1alpha2
 kind: BackupConfiguration
 metadata:
-  name: backup-volume-demo
+  name: volume-backup-demo
   namespace: demo
 spec:
   schedule: '@every 1h'
-  # stashTemplate indicates StashTemplate crd to use for backup the target volume.
-  # stash will create some default StashTemplate  while install to backup/recover various resources.
-  # user can also crate their own StashTemplate to customize backup/recovery
-  stashTemplate: volumeBackup
+  # backupProcedure indicates Procedure crd that specifies the steps to backup a volume.
+  # stash will create some default Procedure crd  while install to backup/recover various resources.
+  # user can also crate their own Procedure to customize backup/recovery
+  backupProcedure: volumeBackup
   # repository refers to the Repository crd that hold backend information
   repository:
     name: stash-backup-repo
@@ -22,13 +22,3 @@ spec:
   retentionPolicy:
     keepLast: 5
     prune: true
-  # containerAttributes is an optional field that can be use to set some attributes 
-  # like resources, securityContext etc. to backup sidecar container
-  containerAttributes:
-    resources:
-      requests:
-        memory: "64Mi"
-        cpu: "250m"
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
