--- a/docs/examples/design/default-backup/default_backup_configuration_workload_data.yaml
+++ b/docs/examples/design/default-backup/default_backup_configuration_workload_data.yaml
@@ -1,15 +1,15 @@
 apiVersion: stash.appscode.com/v1alpha2
 kind: DefaultBackupConfiguration
 metadata:
-  name: default-workload-data-backup-configuration
+  name: workload-data-default-backup-configuration
 spec:
   backend:
     gcs:
       bucket: stash-backup-repo
       prefix: ${metadata.namespace}/${metadata.name} # this prefix template will be used to initialize repository in different directory in backend.
-    storageSecretName: gcs-secret
+    storageSecretName: gcs-secret # users must ensure this secret is present in respective namespace
   schedule: '@every 1h'
-  # < no stashTemplate required >
+  # < no backupProcedure required >
   retentionPolicy:
     name: 'keep-last-5'
     keepLast: 5
