--- a/docs/examples/design/default-backup/default_backup_databae.yaml
+++ b/docs/examples/design/default-backup/default_backup_databae.yaml
@@ -8,8 +8,7 @@ metadata:
     kubedb.com/name: quick-postgres
     # if stash find bellow annotations, it will take backup of it.
     annotations:
-      stash.appscode.com/backup: true
-      stash.appscode.com/stashTemplate: "pgBackup"
+      stash.appscode.com/defaultbackupconfiguration: "pgdb-default-backup-configuration"
 spec:
   clientConfig:
     insecureSkipTLSVerify: true
