--- a/docs/examples/design/recovery/recovery_volume.yaml
+++ b/docs/examples/design/recovery/recovery_volume.yaml
@@ -7,8 +7,8 @@ spec:
   repository:
     name: stash-backup-repo
     namespace: demo
-  # stashTemplate indicates StashTemplate crd to use for creating recovery job
-  stashTemplate: volumeRecovery
+  # recoveryProcedure indicates Procedure crd that specifies steps to recover a volume
+  recoveryProcedure: volumeRecovery
   # paths specifies the directories to recover from the backed up data
   paths:
   - /source/data
