--- a/docs/examples/design/backup/backup_database.yaml
+++ b/docs/examples/design/backup/backup_database.yaml
@@ -1,18 +1,20 @@
-apiVersion: stash.appscode.com/v1alpha2
+apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
   name: database-backup-demo
   namespace: demo
 spec:
   schedule: '@every 1h'
-  # backupProcedure indicates Procedure crd that specifies the steps to backup postgres database
-  backupProcedure: pgBackup
+  # task indicates Task crd that specifies the steps to backup postgres database
+  task:
+    name:   pgBackup
+    database: my-postgres # specify this field if you want to backup a particular database.
   # repository refers to the Repository crd that hold backend information
   repository:
     name: stash-backup-repo
   # target indicates the respective AppBinding crd for target database
   target:
-    workload:
+    ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
       name: quick-postgres
