--- a/docs/examples/design/backuptemplate/default_backup_databae.yaml
+++ b/docs/examples/design/backuptemplate/default_backup_databae.yaml
@@ -8,7 +8,7 @@ metadata:
     kubedb.com/name: quick-postgres
     # if stash find bellow annotations, it will take backup of it.
     annotations:
-      stash.appscode.com/defaultbackupconfiguration: "pgdb-default-backup-configuration"
+      stash.appscode.com/backuptemplate: "pgdb-backup-template"
 spec:
   clientConfig:
     insecureSkipTLSVerify: true
