--- a/docs/examples/design/recovery/recovery_database.yaml
+++ b/docs/examples/design/recovery/recovery_database.yaml
@@ -1,17 +1,17 @@
-apiVersion: stash.appscode.com/v1alpha2
-kind: Recovery
+apiVersion: stash.appscode.com/v1beta1
+kind: RecoveryConfiguration
 metadata:
-  name: recovery-database-demo
+  name: database-recovery-demo
   namespace: demo
 spec:
   repository:
     name: stash-backup-repo
-    namespace: demo
-  # recoveryProcedure indicates Procedure crd that specifies the steps to recover Postgres database
-  recoveryProcedure: pgRecovery
-  recoverTo:
+  # task indicates Task crd that specifies the steps to recover Postgres database
+  task:
+    name: pgRecovery
+  target: # target indicates where to recover
     # indicates the respective AppBinding crd for target database that we want to initialize from backup
-    workload:
+    ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
       name: quick-postgres
