--- a/docs/examples/design/recovery/recovery_volume.yaml
+++ b/docs/examples/design/recovery/recovery_volume.yaml
@@ -1,20 +1,19 @@
-apiVersion: stash.appscode.com/v1alpha2
-kind: Recovery
+apiVersion: stash.appscode.com/v1beta1
+kind: RecoveryConfiguration
 metadata:
   name: recovery-volume-demo
   namespace: demo
 spec:
   repository:
     name: stash-backup-repo
-    namespace: demo
-  # recoveryProcedure indicates Procedure crd that specifies steps to recover a volume
-  recoveryProcedure: volumeRecovery
-  # paths specifies the directories to recover from the backed up data
-  paths:
-  - /source/data
-  recoverTo:
-    # indicates the volume where the recovered data will be stored
-    volume:
-      mountPath: /source/data
-      persistentVolumeClaim:
-        claimName: stash-recovered
+  # task indicates Task crd that specifies steps to recover a volume
+  task:
+    name: volumeRecovery
+  target: # target indicates where the recovered data will be stored
+    ref:
+      apiVersion: v1
+      kind: PersistentVolumeClaim
+      name: demo-pvc  
+    mountPath: /source/data
+    directories: # indicates which directories will be recovered
+    - /source/data
