--- a/docs/examples/design/recovery/recovery_workload_data.yaml
+++ b/docs/examples/design/recovery/recovery_workload_data.yaml
@@ -1,17 +1,15 @@
-apiVersion: stash.appscode.com/v1alpha2
-kind: Recovery
+apiVersion: stash.appscode.com/v1beta1
+kind: RecoveryConfiguration
 metadata:
   name: recovery-database-demo
   namespace: demo
 spec:
   repository:
     name: stash-backup-repo
-    namespace: demo
-  paths:
-  - /source/data
-  recoverTo:
-    # indicates the running workload where we want to recover
-    workload:
+  target: # target indicates where the recovered data will be stored
+    ref:
       apiVersion: apps/v1
       kind: Deployment
       name: stash-demo
+    directories: # indicates which directories will be recovered
+    - /source/data
