--- a/docs/examples/design/restore/restore_volume.yaml
+++ b/docs/examples/design/restore/restore_volume.yaml
@@ -1,5 +1,5 @@
 apiVersion: stash.appscode.com/v1beta1
-kind: RecoveryConfiguration
+kind: RestoreSession
 metadata:
   name: recovery-volume-demo
   namespace: demo
